@@ -93,9 +93,9 @@ filebeat.prospectors:
   include_lines: ["^ERR", "^WARN"]
 -------------------------------------------------------------------------------------
 
-NOTE: If both `include_lines` and `exclude_lines` are defined, Filebeat executes `include_lines` first and then executes `exclude_lines`. 
+NOTE: If both `include_lines` and `exclude_lines` are defined, Filebeat executes `include_lines` first and then executes `exclude_lines`.
 The order in which the two options are defined doesn't matter. The `include_lines` option will always be executed
-before the `exclude_lines` option, even if `exclude_lines` appears before `include_lines` in the config file. 
+before the `exclude_lines` option, even if `exclude_lines` appears before `include_lines` in the config file.
 
 The following example exports all Apache log lines except the debugging messages (DBGs):
 
@@ -207,7 +207,7 @@ Setting `close_inactive` to a lower value means file handles are closed faster b
 
 The timestamp for closing a file does not depend on the modification time of the file but an internal timestamp that is update when the file was last harvested. If `close_inactive` is set to 5 minutes, the countdown for the 5 minutes starts the last time the harvester read a line from the file.
 
-You can use time strings like 2h (2 hours) and 5m (5 minutes). The default is 1h.
+You can use time strings like 2h (2 hours) and 5m (5 minutes). The default is 5m.
 
 
 ===== close_renamed
